# css-inliner

./: README.md  stack.yaml
.stack-work/install/x86_64-linux-tinfo6/lts-11.14/8.2.2/flag-cache/: HTTP-4000.3.12-2aU65P8rXZmEkv3nboPsGr  HandsomeSoup-0.4.2-Gac1CBS2ixCARN90Dh1s4H  css-inliner-0.1.0.0  hxt-9.3.1.16-JIl4Qx5HYV0DrQqM9ydz6a  hxt-charproperties-9.2.0.1-AUb7E6mkZ2fDXtvIiRtV8v  hxt-http-9.1.5.2-9zSGKD7aXyrLA1q0jri799  hxt-regex-xmlschema-9.2.0.3-IYnPkjjWKpA7BGBRS8LfIA  hxt-unicode-9.0.2.4-JQmH0brCxMfxlpeXEYE5  network-uri-2.6.1.0-EYywkSTD8HiCwSdvhz21Tw
css-inliner/: README.md  css-inliner.cabal  link.html  run.sh
css-inliner/.stack-work/install/x86_64-linux-tinfo6/lts-11.14/8.2.2/flag-cache/: ansi-terminal-0.8.0.4-H5HxnxNyY9rFpSVgr55Piv  ansi-wl-pprint-0.6.8.2-9xuhzBw0sxT3GcMo3MQQvg  colour-2.3.4-3MiiEznBxpfEYrMTHbnSer  css-inliner-0.1.0.0  css-text-0.1.3.0-IrmjvKNAMpm2WW2ziYSjLB  optparse-applicative-0.14.2.0-HRm2K9gg7My4NoINALecSL  tagsoup-0.14.6-5zW9hLVTejc6euTmTI8vrY
css-inliner/htmlfiles/: style.html
css-inliner/src/: Main.hs
