name:                css-inliner
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ndcroos/css-inliner#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Decroos
maintainer:          example@example.com
copyright:           2018 Nick Decroos
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable css-inliner
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hxt,
                       HandsomeSoup,
                       optparse-applicative,
                       parsec,
                       css-text,
                       tagsoup,
                       text